# tsunami

./: .gitignore  .gitlab-ci.yml  .style.yapf  Cargo.toml  LICENSE  README.md  derivations.ipynb  erosion.ipynb  erosion.py  erosion1d_v1.ipynb  erosion1d_v2.ipynb  erosion1d_v3.ipynb  erosion1d_v4.ipynb  erosion2.ipynb  erosion2d.ipynb  examples.ipynb  requirements.txt  riversim.ipynb  rustfmt.toml
.cargo/: config.toml
.github/workflows/: pages.yml
flow/: Cargo.toml
flow/src/: bases.rs  examples.rs  lib.rs  odeint.rs  physics.rs  test_util.rs
flow/src/bases/: fourier.rs  mod.rs  ylm.rs
notebooks/: nordsieck_math.ipynb  pyflow_examples.ipynb
pyflow/: Cargo.toml
pyflow/.cargo/: config.toml
pyflow/src/: examples.rs  lib.rs
src/: derivs.rs  examples.rs  fields.rs  geom.rs  implicit.rs  indexing.rs  lib.rs  linalg.rs  math.rs  physics.rs
tsunami/: Cargo.toml  Trunk.toml  index.html  main.js  package-lock.json  package.json  vite.config.js
tsunami/src/: geom.rs  lib.rs  param.rs  render.rs  util.rs
tsunami/tests/: tests.rs
