[workspace]
members = ["flow", "pyflow", "tsunami"]
resolver = "2"

[workspace.dependencies]
approx = { version = "0.5", features = ["num-complex"] }
console_error_panic_hook = "0.1"
console_log = "1"
egui_commonmark = { version = "0.16", features = ["macros"] }
itertools = "0.13"
js-sys = "0.3.69"
gauss-quad = "0.1.8"
log = "0.4"
nalgebra = "0.32.5"
ndarray = { version = "0.15", features = ["approx-0_5"] }
ndrustfft = "0.4.4"
num-traits = "0.2"
numpy = "0.21"
ode_solvers = "0.4.0"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
rayon = "1.10"
three-d = { git = "https://github.com/joshburkart/three-d.git", rev = "255978cf6626887b24a5d5f66b0c0283874612b7", features = [
    "egui-gui",
] }
three-d-asset = { version = "0.7", features = ["jpeg", "http"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.2.1" }
web-sys = { version = "0.3.4", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
] }

[profile.release]
debug = true
lto = "thin"
