[workspace]
members = ["flow", "pyflow", "tsunami"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
approx = { version = "0.5", features = ["num-complex"] }
console_error_panic_hook = "0.1"
console_log = "1"
derivative = "2.2"
egui_commonmark = { version = "0.16", features = ["macros"] }
frand = "0.10"
indoc = "2.0.5"
itertools = "0.13"
js-sys = "0.3.69"
gauss-quad = "0.1.8"
log = "0.4"
nalgebra = "0.33"
ndarray = { version = "0.15", features = ["approx-0_5"] }
ndrustfft = "0.4.5"
num-traits = "0.2"
numpy = "0.21"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
rayon = "1.10"
ringbuffer = "0.15"
strum = { version = "0.26", features = ["derive"] }
three-d = { git = "https://github.com/joshburkart/three-d.git", rev = "afdf6f75701c2410ea2ad980f8d710c2ea7776a3", features = [
    "egui-gui",
] }
three-d-asset = { version = "0.7", features = ["jpeg", "png"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-rayon = { version = "1.2.1" }
web-sys = { version = "0.3.4", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
] }
web-time = "1.1"
