[package]
edition = "2021"
name = "flow"
version = "0.1.0"

[lib]
name = "flow"

[dependencies]
itertools = { workspace = true }
gauss-quad = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
ndrustfft = { workspace = true }
num-traits = { workspace = true }
ode_solvers = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
style = "deny"
suspicious = "deny"
