[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flow = { path = "../flow" }

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
egui_commonmark = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
three-d = { workspace = true }
three-d-asset = { workspace = true, features = ["obj"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-rayon = { workspace = true }
web-sys = { workspace = true }
