[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flow = { path = "../flow" }

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
derivative = { workspace = true }
egui_commonmark = { workspace = true }
indoc = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
ringbuffer = { workspace = true }
strum = { workspace = true }
three-d = { workspace = true }
three-d-asset = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-rayon = { workspace = true, optional = true }
web-sys = { workspace = true }
web-time = { workspace = true }
